# bifti-phantoms

./: .gitignore  JSON.md  NIFTI.md  README.md  REGISTRY.md  SPEC.md  bifti-phantom-v1.schema.json  bifti-registry.schema.json  nifti-phantom-v1.schema.json  nifti-registry.schema.json  registry.json
.github/workflows/: validate-registry.yml
demo/: DEMO.md  demo.py  make_numerical_brain_cropped_bifti.py  mrzero_sim.py  mrzero_sim_simple.py  nifti_loader.py  nifti_phantom.py  nifti_registry.py  nifti_to_koma.py
docs/: app.js  index.html  list.css  modal.css  registry.css  style.css
gh-pages/: index.html  style.css
python/bifti/: README.md  pyproject.toml
python/bifti/examples/: DEMO.md  demo.py  mrzero_sim.py  nifti_to_koma.py
python/bifti/examples/data/: generate.py  shapes.json  shapes_resliced.json  subj42-3T.json
python/bifti/src/bifti/: __init__.py  loader.py  phantom.py  registry.py
python_ref_impl/: nifti_phantom.py
rust/bifti/: Cargo.toml
rust/bifti/src/: eval.rs  lib.rs  loader.rs  mod.rs  nifti_loader.rs  phantom.rs  registry.rs
rust/src/: config.rs  eval.rs
tools/: check_registry_immutable.py  validate_registry.py
tools/gen_brainweb/: generate.py  subj04.json
