[package]
name = "bifti"
version = "0.1.0"
edition = "2024"

[dependencies]
nifti = { version = "0.17.0", default-features = false }
num-complex = "0.4.6"
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tar = { version = "0.4.46", default-features = false }
thiserror = "2.0.19"
ureq = "3.3.0"
urlencoding = "2.1.3"
winnow = "1.0.4"
